# CameraCalibration

./: README.md  gen_1448x1086_rgb.py  generate_agdc_fisheye.py  generate_agdc_fisheye_multiscale.py  generate_agdc_golden.py  generate_agdc_mesh.py  generate_agdc_stereo.py  generate_agdc_stereo_fusion.py  reorganize_agdc_test.py
.history/: 相机标定零基础入门教程_20260628005642.md  相机标定零基础入门教程_20260628005903.md  相机标定零基础入门教程_20260628011319.md  相机标定零基础入门教程_20260628135448.md  相机标定零基础入门教程_20260628142315.md
.history/agdc_test/: README_20260629113111.md  README_20260629113216.md  README_20260629113218.md
.history/agdc_test_fisheye_200x150/: README_20260630202933.md  README_20260701091045.md
.superpowers/brainstorm/: visual-style-comparison.html
agdc_output/: golden_ref_rectified.tif  reconstructed_16x12.tif  reconstructed_32x24.tif  reconstructed_64x48.tif
agdc_output/agdc_mesh_16x12/: agdc_mesh_16x12.json  agdc_mesh_16x12_fixed.h  agdc_mesh_16x12_float.h
agdc_output/agdc_mesh_32x24/: agdc_mesh_32x24.json  agdc_mesh_32x24_fixed.h  agdc_mesh_32x24_float.h
agdc_output/agdc_mesh_64x48/: agdc_mesh_64x48.json  agdc_mesh_64x48_fixed.h  agdc_mesh_64x48_float.h
agdc_test/: README.md  agdc_mesh_16x12.h  agdc_mesh_16x12_36bit.hex  agdc_mesh_32x24_36bit.hex  golden_rectified_analytic_bi.tif  manifest.json  reconstructed_mesh_32x24.tif
agdc_test/verify/: golden_rectified_analytic_nn.tif  reconstructed_mesh_16x12.tif
agdc_test_fisheye/: README.md  manifest.json
agdc_test_fisheye/verify/: reconstructed_mesh_16x12.tif
agdc_test_fisheye_1024x768/: README.md  manifest.json
agdc_test_fisheye_1024x768/verify/: golden_rectified_perspective.tif  reconstructed_mesh_32x24.tif
agdc_test_fisheye_1448x1086_RGB/: README.md  manifest.json
agdc_test_fisheye_1448x1086_RGB/verify/: golden_rectified_perspective.tif  reconstructed_mesh_16x12.tif  reconstructed_mesh_32x24.tif
agdc_test_fisheye_200x150/: manifest.json
agdc_test_fisheye_200x150/verify/: golden_rectified_perspective.tif  (+2 more)
agdc_test_stereo/: README.md  manifest.json
agdc_test_stereo_fusion/: README.md  manifest.json
相机标定课程/第一章 标定基础知识 code & data/calib/: CMakeLists.txt  calibration.cpp  opencv_build_linux.sh  out_camera_data.yml  run_single.sh  run_stereo.sh  stereo_calib.cpp
相机标定课程/第一章 标定基础知识 code & data/calib/data/: extrinsics.yml  intrinsics.yml  out_camera_data.yml
相机标定课程/第四章 单应矩阵示例/: CMakeLists.txt  build.cmd  run.sh  virtual-billboard.cpp
(+76 files in other folders)
